--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  width: 1200px;
+  align-items: center;
+  justify-content: center;
+}
+
+.headerButton {
+  background-color: rgb(64, 99, 67);
+  color: rgb(236, 231, 180);
+  padding: 5px 10px;
+  border: 2px solid rgb(236, 231, 180);
+}
+
 .App {
   width: 100%;
   height: 100vh;
-  background-color: burlywood;
+  background-color: rgb(64, 99, 67);
 }/*# sourceMappingURL=App.css.map */
