--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 @use "styles/_variables" as v;
+@use "styles/header";
 
 .App {
  width: 100%;
  height: 100vh;
- background-color: burlywood;
+ background-color: v.$main-dark
 }
