--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,8 @@ $secondary-dark: rgb(50, 80, 46);
 $main-light: rgb(236, 231, 180);
 $secondary-light: rgb(243, 239, 204);
 
+//shadows
+$light-shadow: rgba(236, 231, 180, 0.8);
+
 //width
 $main-width: 1200px;
