--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,19 @@
+header {
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  box-shadow: 10px 10px 5px rgba(236, 231, 180, 0.8);
+  padding: 30px 0;
+  width: 1200px;
+  margin: 0 auto;
+}
+
 ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
   display: flex;
-  width: 1200px;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .headerButton {
@@ -13,6 +21,7 @@ ul {
   color: rgb(236, 231, 180);
   padding: 5px 10px;
   border: 2px solid rgb(236, 231, 180);
+  margin: 0 20px;
 }
 
 .App {
