--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,17 @@
 //colors
-$main-dark: rgb(64, 99, 67);
-$secondary-dark: rgb(50, 80, 46);
-$main-light: rgb(236, 231, 180);
-$secondary-light: rgb(243, 239, 204);
+$secondary-dark: rgb(64, 99, 67);
+$main-dark: rgb(50, 80, 46);
+$secondary-light: rgb(236, 231, 180);
+$main-light: rgb(243, 239, 204);
 
 //shadows
-$light-shadow: rgba(236, 231, 180, 0.8);
+$light-shadow: rgba(243, 239, 204, 0.5);
 
 //width
 $main-width: 1200px;
+
+//font size
+$medium-fs: 20px;
+
+//font-family
+$main-font: 'Raleway', sans-serif;
