--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 header {
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  box-shadow: 10px 10px 5px rgba(236, 231, 180, 0.8);
-  padding: 30px 0;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 0 5px 20px rgba(243, 239, 204, 0.5);
+  padding: 20px 20px;
   width: 1200px;
   margin: 0 auto;
 }
@@ -17,15 +17,25 @@ ul {
 }
 
 .headerButton {
-  background-color: rgb(64, 99, 67);
-  color: rgb(236, 231, 180);
-  padding: 5px 10px;
-  border: 2px solid rgb(236, 231, 180);
-  margin: 0 20px;
+  background-color: rgb(50, 80, 46);
+  color: rgb(243, 239, 204);
+  padding: 10px;
+  margin: 0 0 0 20px;
+  font-size: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-family: "Raleway", sans-serif;
+}
+
+.headerButton:hover {
+  border: 1px solid rgb(243, 239, 204);
+  box-shadow: 0 0 20px rgba(243, 239, 204, 0.5);
+  padding: 10px 20px;
+  margin: 0;
 }
 
 .App {
   width: 100%;
   height: 100vh;
-  background-color: rgb(64, 99, 67);
+  background-color: rgb(50, 80, 46);
 }/*# sourceMappingURL=App.css.map */
