--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,8 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+* {
+  box-sizing: border-box;
 }/*# sourceMappingURL=index.css.map */
