--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,7 +22,7 @@ ul {
   background-color: v.$main-dark;
   color: v.$main-light;
   padding: 10px;
-  margin: 0 0 0 20px;
+  margin: 0 20px;
   font-size: v.$medium-fs;
   cursor: pointer;
   text-decoration: none;
@@ -33,5 +33,5 @@ ul {
   border: 1px solid v.$main-light;
   box-shadow: 0 0 20px v.$light-shadow;
   padding: 10px 20px;
-  margin: 0;
+  margin: 0 9px;
 }
