--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,25 @@ ul {
   margin: 0 9px;
 }
 
+.errorName {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100%;
+  height: 100vh;
+}
+
+.errorBack {
+  padding: 20px;
+  font-size: "Raleway", sans-serif;
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+}
+
 .App {
   width: 100%;
   height: 100vh;
