--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 header {
+  background: linear-gradient(45deg, rgb(50, 80, 46) 5%, rgb(236, 231, 180) 95%);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   box-shadow: 0 5px 20px rgba(243, 239, 204, 0.5);
@@ -17,18 +18,17 @@ ul {
 }
 
 .headerButton {
-  background-color: rgb(50, 80, 46);
-  color: rgb(243, 239, 204);
+  color: rgb(50, 80, 46);
   padding: 10px;
   margin: 0 20px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
   text-decoration: none;
   font-family: "Raleway", sans-serif;
 }
 
 .headerButton:hover {
-  border: 1px solid rgb(243, 239, 204);
+  border: 1px solid rgb(236, 231, 180);
   box-shadow: 0 0 20px rgba(243, 239, 204, 0.5);
   padding: 10px 20px;
   margin: 0 9px;
@@ -56,5 +56,4 @@ ul {
 .App {
   width: 100%;
   height: 100vh;
-  background-color: rgb(50, 80, 46);
 }/*# sourceMappingURL=App.css.map */
