--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $main-light: rgb(236, 231, 180);
 $secondary-light: rgb(243, 239, 204);
 
 //shadows
-$light-shadow: rgba(243, 239, 204, 0.5);
+$light-shadow: rgba(50, 80, 46, 0.5);
 
 //width
 $main-width: 1200px;
@@ -15,3 +15,6 @@ $medium-fs: 18px;
 
 //font-family
 $main-font: 'Raleway', sans-serif;
+
+//radius
+$radius-twenty: 20px;
