--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 header {
-  background: linear-gradient(45deg, rgb(50, 80, 46) 5%, rgb(236, 231, 180) 95%);
+  background: linear-gradient(145deg, rgb(50, 80, 46), rgb(236, 231, 180) 45%);
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 0 5px 20px rgba(243, 239, 204, 0.5);
-  padding: 20px 20px;
+  box-shadow: 0 5px 20px rgba(50, 80, 46, 0.5);
+  padding: 20px;
   width: 1200px;
   margin: 0 auto;
 }
@@ -29,7 +29,7 @@ ul {
 
 .headerButton:hover {
   border: 1px solid rgb(236, 231, 180);
-  box-shadow: 0 0 20px rgba(243, 239, 204, 0.5);
+  box-shadow: 0 0 20px rgba(50, 80, 46, 0.5);
   padding: 10px 20px;
   margin: 0 9px;
 }
@@ -51,6 +51,22 @@ ul {
   text-decoration: none;
   color: black;
   cursor: pointer;
+}
+
+footer {
+  background: linear-gradient(145deg, rgb(236, 231, 180) 50%, rgb(50, 80, 46));
+  margin: 0 auto;
+  width: 1200px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  padding: 20px;
+}
+
+footer p {
+  font-family: "Raleway", sans-serif;
+  margin: 0;
+  text-align: center;
+  color: rgb(50, 80, 46);
 }
 
 .App {
