--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@ $main-light: rgb(236, 231, 180);
 $secondary-light: rgb(243, 239, 204);
 
 //shadows
-$light-shadow: rgba(50, 80, 46, 0.5);
+$dark-shadow: rgba(50, 80, 46, 0.5);
 
 //width
 $main-width: 1200px;
