--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,9 @@
 header {
-  background: linear-gradient(145deg, rgb(50, 80, 46), rgb(236, 231, 180) 45%);
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 0 5px 20px rgba(50, 80, 46, 0.5);
   padding: 20px;
   width: 1200px;
   margin: 0 auto;
 }
-
-ul {
+header ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -16,22 +11,19 @@ ul {
   align-items: center;
   justify-content: flex-end;
 }
-
-.headerButton {
+header ul .headerButton {
   color: rgb(50, 80, 46);
   padding: 10px;
-  margin: 0 20px;
+  margin: 0 10px;
   font-size: 18px;
   cursor: pointer;
   text-decoration: none;
   font-family: "Raleway", sans-serif;
+  transition: 100ms;
+  display: inline-block;
 }
-
-.headerButton:hover {
-  border: 1px solid rgb(236, 231, 180);
-  box-shadow: 0 0 20px rgba(50, 80, 46, 0.5);
-  padding: 10px 20px;
-  margin: 0 9px;
+header ul .headerButton:hover {
+  transform: scale(1.4);
 }
 
 .errorName {
@@ -54,19 +46,14 @@ ul {
 }
 
 footer {
-  background: linear-gradient(145deg, rgb(236, 231, 180) 50%, rgb(50, 80, 46));
   margin: 0 auto;
   width: 1200px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
   padding: 20px;
-  box-shadow: 0 -5px 20px rgba(50, 80, 46, 0.5);
+  text-align: center;
 }
-
-footer p {
+footer footer p {
   font-family: "Raleway", sans-serif;
   margin: 0;
-  text-align: center;
   color: rgb(50, 80, 46);
 }
 
