style: use grid

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -7,7 +7,7 @@ footer {
   padding: 20px;
   text-align: center;
 
-  footer p {
+  p {
     font-family: v.$main-font;
     margin: 0;
     color: v.$main-dark;
