--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ footer {
   padding: 20px;
   text-align: center;
 }
-footer footer p {
+footer p {
   font-family: "Raleway", sans-serif;
   margin: 0;
   color: rgb(50, 80, 46);
@@ -60,4 +60,6 @@ footer footer p {
 .App {
   width: 100%;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 80px auto 60px;
 }/*# sourceMappingURL=App.css.map */
