--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,10 @@ footer p {
   color: rgb(50, 80, 46);
 }
 
+#main {
+  background: radial-gradient(rgb(236, 231, 180), rgb(50, 80, 46));
+}
+
 .App {
   width: 100%;
   height: 100vh;
