--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,13 @@
 @use "styles/_variables" as v;
 @use "styles/header";
-@use 'styles/error';
-@use './styles/footer';
+@use "styles/error";
+@use "./styles/footer";
+@use "./styles/main";
+
 
 .App {
- width: 100%;
- height: 100vh;
- display: grid;
- grid-template-rows: 80px auto 60px;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-rows: 80px auto 60px;
 }
-
