--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -3,4 +3,13 @@
 
 #main {
   background: radial-gradient(v.$main-light, v.$main-dark);
+  @include m.flex-center;
+  justify-content: center;
+  font-size: 100px;
+  font-weight: bold;
+
+  div {
+    transition: .3s color;
+    cursor: pointer;
+  }
 }
