--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -2,11 +2,12 @@
 @use './mixins' as m;
 
 #main {
-  background: radial-gradient(v.$main-light, v.$main-dark);
+  background: linear-gradient(#D26B9D, #4E499E);
   @include m.flex-center;
   justify-content: center;
   font-size: 100px;
   font-weight: bold;
+  color: white;
 
   div {
     transition: .3s color;
