feat: home page recreated with animation

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -31,10 +31,10 @@
       }
     }
 
-    #text {
-      position: absolute;
-      bottom: 300px;
-      right: 100px;
+    .text {
+      // position: absolute;
+      // bottom: 300px;
+      // right: 100px;
       color: white;
       width: 50%;
 
