--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,6 @@
 //colors
-$secondary-dark: rgb(64, 99, 67);
-$main-dark: rgb(50, 80, 46);
-$main-light: rgb(236, 231, 180);
-$secondary-light: rgb(243, 239, 204);
+$text-color: white;
+$main-dark: black;
 
 //width
 $main-width: 1200px;
