--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 header {
   padding: 20px;
-  width: 1200px;
+  max-width: 1200px;
+  width: 100%;
   margin: 0 auto;
 }
 header ul {
@@ -12,7 +13,7 @@ header ul {
   justify-content: flex-end;
 }
 header ul .headerButton {
-  color: rgb(50, 80, 46);
+  color: black;
   padding: 10px;
   margin: 0 10px;
   font-size: 18px;
@@ -54,11 +55,45 @@ footer {
 footer p {
   font-family: "Raleway", sans-serif;
   margin: 0;
-  color: rgb(50, 80, 46);
+  color: black;
 }
 
-#main {
-  background: radial-gradient(rgb(236, 231, 180), rgb(50, 80, 46));
+.bg {
+  background: linear-gradient(#d26b9d, #4e499e);
+  font-style: oblique;
+}
+.bg #wrapper {
+  position: relative;
+  max-width: 1200px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+.bg #wrapper #words {
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+  margin: 0;
+  font-size: 100px;
+}
+.bg #wrapper #words div {
+  transition: 0.3s color;
+  cursor: pointer;
+  background-image: radial-gradient(#4e499e 30%, #cf23cf);
+  -webkit-background-clip: text;
+          background-clip: text;
+  color: transparent;
+}
+.bg #wrapper .text {
+  color: white;
+  width: 50%;
+}
+.bg #wrapper .text p {
+  font-size: 18px;
 }
 
 .App {
