feat: work page cards html

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,8 @@
 @use "styles/error";
 @use "./styles/footer";
 @use "./styles/main";
-@use "./styles/work-cont";
+@use "./styles/cont";
+@use "./styles/work";
 
 .App {
   width: 100%;
