--- a/src/App.css
+++ b/src/App.css
@@ -162,6 +162,28 @@ footer p {
   margin-left: 10px;
 }
 
+.cards-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+}
+.cards-wrapper .card {
+  background-color: aliceblue;
+  padding: 30px;
+  transition: all 1s ease-in;
+  cursor: pointer;
+}
+.cards-wrapper .card__image {
+  width: 100%;
+}
+.cards-wrapper .card__image img {
+  width: 100%;
+}
+.cards-wrapper .card:hover {
+  transform: scale(1.5);
+  background-color: brown;
+}
+
 .App {
   width: 100%;
   height: 100vh;
