--- a/src/App.css
+++ b/src/App.css
@@ -197,11 +197,11 @@ footer p {
   align-items: center;
   justify-content: center;
   -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
 }
 #bg-modal .modal {
   width: 50%;
-  background-color: red;
+  background: radial-gradient(#6868ac, #119da4);
   padding: 50px;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
@@ -211,6 +211,18 @@ footer p {
 }
 #bg-modal .modal__image img {
   width: 100%;
+}
+#bg-modal .modal__text {
+  color: white;
+}
+#bg-modal .modal__text-buttons {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  justify-content: space-between;
+}
+#bg-modal .modal__text-buttons button {
+  padding: 10px 30px;
 }
 
 .App {
