--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -39,11 +39,11 @@
   @include m.flex-center;
   justify-content: center;
   -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
 
   .modal {
     width: 50%;
-    background-color: red;
+    background: radial-gradient(#6868ac, #119da4);
     padding: 50px;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -53,6 +53,20 @@
 
       img {
         width: 100%;
+      }
+    }
+
+    &__text {
+      color: v.$text-color;
+
+      &-buttons {
+        @include m.flex-center;
+        width: 50%;
+        justify-content: space-between;
+
+        button {
+          padding: 10px 30px;
+        }
       }
     }
   }
