--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -4,7 +4,6 @@
 .cards-wrapper {
   display: flex;
   gap: 50px;
-  padding: 100px 0;
   flex-wrap: wrap;
 
   .card {
@@ -26,7 +25,7 @@
 
   .card:hover {
     transform: scale(1.1);
-    background-color: red;
+    background-color: #cb808b;
   }
 }
 
