--- a/src/styles/_cont.scss
+++ b/src/styles/_cont.scss
@@ -4,7 +4,7 @@
 .cont {
   @include m.flex-center;
   flex-direction: column;
-  padding-top: 200px;
+  padding-top: 200px !important;
   color: v.$text-color;
   font-family: v.$main-font;
   font-size: v.$medium-fs;
