--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -24,6 +24,7 @@
     @include m.margin-za;
     overflow: hidden;
     min-height: 750px;
+    padding: 0 50px;
 
     #words {
       font-weight: bold;
