--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -31,3 +31,9 @@
   -moz-osx-font-smoothing: grayscale;
   font-style: oblique;
 }
+
+@mixin image-style {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
