--- a/src/styles/_work.scss
+++ b/src/styles/_work.scss
@@ -5,6 +5,7 @@
   display: flex;
   gap: 50px;
   flex-wrap: wrap;
+  padding-bottom: 50px;
 
   .card {
     background-color: aliceblue;
@@ -18,8 +19,13 @@
       width: 100%;
 
       img {
-        width: 100%;
+        max-height: 300px;
+        @include m.image-style;
       }
+    }
+
+    h2 {
+      margin-bottom: 0;
     }
   }
 
@@ -51,7 +57,8 @@
       width: 100%;
 
       img {
-        width: 100%;
+        max-height: 400px;
+        @include m.image-style;
       }
     }
 
