--- a/src/styles/_error.scss
+++ b/src/styles/_error.scss
@@ -1,19 +1,28 @@
-@use './mixins' as m;
-@use './variables' as v;
+@use "./mixins" as m;
+@use "./variables" as v;
 
 .errorName {
+  @include m.bg-gradient;
   @include m.flex-center;
+  color: v.$text-color;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: auto;
   width: 100%;
   height: 100vh;
-}
 
-.errorBack {
-  padding: 20px;
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
+  .errorBack {
+    color: v.$text-color;
+    padding: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: v.$medium-fs;
+  }
+
+  .errorBack:hover {
+    border: 2px solid v.$btn-bg;
+    padding: 18px;
+    border-radius: 10%;
+  }
 }
