--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -6,6 +6,13 @@ header {
   max-width: v.$main-width;
   width: 100%;
   @include m.margin-za;
+  @include m.flex-center;
+  justify-content: space-between;
+
+  div {
+    font-family: "Indie Flower", cursive;
+    font-size: 50px;
+  }
 
   ul {
     margin: 0;
